--- a/index.html
+++ b/index.html
@@ -3,7 +3,27 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Result Summary</title>
+
+  <title>Result Summary Component</title>
+  <meta name="title" content="Result Summary Component">
+  <meta name="author" content="VIMP">
+  <meta name="description" content="This challenge has something for everyone. It’s a HTML and CSS only project, but we’ve also provided a JSON file of the test results for anyone wanting to practice JS.">
+  <meta name="keywords" content="Result summary component,Frontend Mentor Challenge,Newbie Challenges">
+  <meta name="robots" content="index, follow">
+
+  <meta property="og:type" content="website">
+  <meta property="og:title" content="Result Summary Component">
+  <meta property="og:site_name" content="Result Summary Component">
+  <meta property="og:description" content="This challenge has something for everyone. It’s a HTML and CSS only project, but we’ve also provided a JSON file of the test results for anyone wanting to practice JS.">
+  <meta property="og:image" content="https://raw.githubusercontent.com/mendezpvi/fm-results-summary-component/main/assets/screenshot/thumbnail.png">
+  <meta property="og:url" content="https://mendezpvi.github.io/fm-results-summary-component/">
+
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="Result Summary Component">
+  <meta name="twitter:description" content="This challenge has something for everyone. It’s a HTML and CSS only project, but we’ve also provided a JSON file of the test results for anyone wanting to practice JS.">
+  <meta name="twitter:image" content="https://raw.githubusercontent.com/mendezpvi/fm-results-summary-component/main/assets/screenshot/thumbnail.png">
+  <meta name="twitter:domain" content="mendezpvi.github.io">
+  <meta name="twitter:url" content="https://mendezpvi.github.io/fm-results-summary-component/">
 
   <link rel="icon" href="./assets/icon/favicon-32x32.png">
   <link rel="apple-touch-icon" href="./assets/icon/favicon-32x32.png">
@@ -35,7 +55,7 @@
   <footer class="attribution fw-500">
     <small>Challenge by <a class="attribution__cta fw-700" href="https://www.frontendmentor.io/challenges/" target="_blank" rel="noreferrer">Frontend Mentor</a> - Coded by <a class="attribution__cta fw-700" href="https://github.com/mendezpvi/fm-results-summary-component" target="_blank" rel="noreferrer">VIMP</a></small>
   </footer>
-  
+
   <script type="module" src="./js/index.js"></script>
 </body>
 </html>
